--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "quiz-api",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
-  "license": "UNLICENSED",
+  "name": "api-main-module",
+  "version": "1.0.0",
+  "description": "Main NestJS Module of the REST API server",
+  "author": "Artsiom Finenka",
+  "license": "ISC",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -20,7 +19,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@fellendorf/api-quiz-questions-module": "^1.1.4",
+    "@fellendorf/api-quiz-questions-module": "^1.2.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
